force-app/main/default/objects/IT_Scorecard__c/IT_Scorecard__c.object-meta.xml
<CustomObject>
    <description>The IT Scorecard object  serves as a centralized hub for tracking and monitoring various aspects of IT operations, system performance, and project management across different departments and software tools within the organization. This custom object is designed to provide stakeholders with comprehensive insights into the health, status, and progress of IT initiatives, enabling informed decision-making and proactive management of IT resources.</description>
    <label>IT Scorecard</label>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>IT Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>