force-app/main/default/objects/IT_Scorecard__c/fields/Admin_Only_Field__c.field-meta.xml
<CustomField>
    <fullName>Admin_Only_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin Only Field</label>
    <type>Checkbox</type>
</CustomField>