force-app/main/default/objects/IT_Scorecard__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ServiceMax/Salesforce</fullName>
            </value>
            <value>
                <fullName>Optics-Lens</fullName>
            </value>
            <value>
                <fullName>Epicor</fullName>
            </value>
            <value>
                <fullName>ERP Project</fullName>
            </value>
            <value>
                <fullName>Data Initiative</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>