force-app/main/default/objects/IT_Scorecard__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <description>Allows for a more detailed documentation of the project, rationale, objectives and outline.</description>
    <label>Business Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>