force-app/main/default/objects/IT_Scorecard__c/fields/Ensure_Operability__c.field-meta.xml
<CustomField>
    <fullName>Ensure_Operability__c</fullName>
    <inlineHelpText>What are the critical operational processes and systems that require consistent monitoring and maintenance?</inlineHelpText>
    <label>Ensure Operability?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>