force-app/main/default/objects/IT_Scorecard__c/fields/Impacts_Customer_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Impacts_Customer_Vendor__c</fullName>
    <inlineHelpText>How does the product/service currently impact the satisfaction levels of our customers and vendors?</inlineHelpText>
    <label>Impacts Customer/Vendor?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>