force-app/main/default/objects/IT_Scorecard__c/fields/Level_of_Impact__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Impact__c</fullName>
    <label>Level of Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>