force-app/main/default/objects/IT_Scorecard__c/fields/LoE__c.field-meta.xml
<CustomField>
    <fullName>LoE__c</fullName>
    <inlineHelpText>Estimated amount of time the task will take in business hours.</inlineHelpText>
    <label>Level of Effort</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>