force-app/main/default/objects/IT_Scorecard__c/fields/Scalability__c.field-meta.xml
<CustomField>
    <fullName>Scalability__c</fullName>
    <inlineHelpText>What are the current limitations or bottlenecks that could hinder the scalability of our product/service?</inlineHelpText>
    <label>Scalability?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>