force-app/main/default/objects/IT_Scorecard__c/fields/Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Stakeholders__c</fullName>
    <label>Stakeholder(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Last Mile</fullName>
            </value>
            <value>
                <fullName>All Users</fullName>
            </value>
            <value>
                <fullName>System Administrators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>