force-app/main/default/objects/IT_Scorecard__c/fields/Strategic_Goal__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Goal__c</fullName>
    <inlineHelpText>What are the primary strategic goals that our organization aims to achieve in the next one, three, or five years?</inlineHelpText>
    <label>Strategic Goal?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>