force-app/main/default/objects/IT_Scorecard__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <inlineHelpText>Identify all systems involved in or impacted by the project.</inlineHelpText>
    <label>System(s)</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Application__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Epicor</fullName>
            </value>
            <value>
                <fullName>System Epicor2</fullName>
            </value>
            <value>
                <fullName>System Vision</fullName>
            </value>
            <value>
                <fullName>System Vision2</fullName>
            </value>
            <value>
                <fullName>System Infrastructure</fullName>
            </value>
            <value>
                <fullName>System Infrastructure2</fullName>
            </value>
            <value>
                <fullName>System Optics/Lens</fullName>
            </value>
            <value>
                <fullName>System Optics/Lens2</fullName>
            </value>
            <value>
                <fullName>System Data Initiative</fullName>
            </value>
            <value>
                <fullName>System Data Initiative2</fullName>
            </value>
            <value>
                <fullName>System 2</fullName>
            </value>
            <value>
                <fullName>System 3</fullName>
            </value>
            <value>
                <fullName>ServiceMax</fullName>
            </value>
            <value>
                <fullName>ServiceMax Go App</fullName>
            </value>
            <value>
                <fullName>ServiceMax Go Desktop</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>