force-app/main/default/objects/IT_Scorecard__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>Allows for a description of tasks or activities related to the project.</description>
    <label>Task</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>