force-app/main/default/objects/IT_Scorecard__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <formula>IF( ISPICKVAL( Ensure_Operability__c , &quot;Yes&quot;),1, 0) +
IF( ISPICKVAL( Impacts_Customer_Vendor__c  , &quot;Yes&quot;),1, 0) +
IF( ISPICKVAL( Strategic_Goal__c , &quot;Yes&quot;),1, 0) +
IF( ISPICKVAL( Usability_Enhancement__c  , &quot;Yes&quot;),1, 0) +
IF( ISPICKVAL( Compliance__c  , &quot;Yes&quot;),1, 0) +
IF( ISPICKVAL( Scalability__c  , &quot;Yes&quot;),1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>