force-app/main/default/objects/IT_Scorecard__c/fields/Usability_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Usability_Enhancement__c</fullName>
    <inlineHelpText>What are the key usability issues or pain points identified by users when interacting with our product/service?</inlineHelpText>
    <label>Usability Enhancement?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>