force-app/main/default/objects/IT_Scorecard__c/recordTypes/Data_Initiative.recordType-meta.xml
<RecordType>
    <fullName>Data_Initiative</fullName>
    <active>true</active>
    <label>Data Initiative</label>
</RecordType>