force-app/main/default/objects/IT_Scorecard__c/recordTypes/Epicor.recordType-meta.xml
<RecordType>
    <fullName>Epicor</fullName>
    <active>true</active>
    <label>Epicor</label>
</RecordType>