force-app/main/default/objects/IT_Scorecard__c/recordTypes/ERP_Project.recordType-meta.xml
<RecordType>
    <fullName>ERP_Project</fullName>
    <active>true</active>
    <label>ERP Project</label>
</RecordType>