force-app/main/default/objects/IT_Scorecard__c/recordTypes/Infrastructure.recordType-meta.xml
<RecordType>
    <fullName>Infrastructure</fullName>
    <active>true</active>
    <label>Infrastructure</label>
</RecordType>