force-app/main/default/objects/IT_Scorecard__c/recordTypes/Optics_Lens.recordType-meta.xml
<RecordType>
    <fullName>Optics_Lens</fullName>
    <active>true</active>
    <label>Optics-Lens</label>
</RecordType>