force-app/main/default/objects/IT_Scorecard__c/recordTypes/ServiceMax_Salesforce.recordType-meta.xml
<RecordType>
    <fullName>ServiceMax_Salesforce</fullName>
    <active>true</active>
    <label>ServiceMax/Salesforce</label>
</RecordType>