force-app/main/default/objects/IT_Scorecard__c/recordTypes/Vision.recordType-meta.xml
<RecordType>
    <fullName>Vision</fullName>
    <active>true</active>
    <label>Vision</label>
</RecordType>