force-app/main/default/objects/IT_Scorecard__c/validationRules/IfCancelledSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>IfCancelledSelected</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Cancelled&quot;)  &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot select this value. Choose Pending Approval and submit the record for approval</errorMessage>
</ValidationRule>